// Root build policy for the bounded stage-0 modules and repository conformance gates.
ext.repositoryRoot = rootDir.parentFile
ext.maxWheelerSourceFilesPerDirectory = 10

allprojects {
    group = 'com.typeobject.wheeler'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

tasks.register('treeSitterInstall', Exec) {
    workingDir new File(repositoryRoot, 'tree-sitter-wheeler')
    commandLine 'npm', 'ci'
}

tasks.register('treeSitterTest', Exec) {
    dependsOn treeSitterInstall
    workingDir new File(repositoryRoot, 'tree-sitter-wheeler')
    commandLine 'npm', 'test'
}

tasks.register('bootstrapContainmentTest') {
    group = 'verification'
    description = 'Confines all Java and Gradle-owned files to the disposable bootstrap tree.'
    doLast {
        def escaped = fileTree(repositoryRoot) {
            include '**/*.java', '**/*.gradle', '**/gradlew', '**/gradlew.bat',
                    '**/gradle-wrapper.jar', '**/gradle-wrapper.properties'
            exclude '.git/**', 'bootstrap/**', '**/build/**', '**/node_modules/**'
        }.files.sort().collect {
            repositoryRoot.toPath().relativize(it.toPath()).toString()
        }
        if (!escaped.isEmpty()) {
            throw new GradleException('Java and Gradle files escaped bootstrap/:\n'
                    + escaped.join('\n'))
        }
    }
}

tasks.register('sourceSyntaxTest') {
    group = 'verification'
    description = 'Rejects competing assertion spellings in authored Wheeler source.'
    doLast {
        def failures = []
        fileTree(repositoryRoot) {
            include '**/*.w'
            exclude '**/build/**', '**/node_modules/**'
        }.files.sort().each { file ->
            def text = file.getText('UTF-8')
            if ((text =~ /(?m)\bassert\s+(?!\()/).find()) {
                failures.add("${repositoryRoot.toPath().relativize(file.toPath())}: bare assert")
            }
            if ((text =~ /\b(?:assertTrue|assertFalse|assertEquals|expectEqual)\s*\(/).find()) {
                failures.add("${repositoryRoot.toPath().relativize(file.toPath())}: duplicate assertion API")
            }
            if ((text =~ /\b(?:mock|when)\s*\(/).find()) {
                failures.add("${repositoryRoot.toPath().relativize(file.toPath())}: ambient mock API")
            }
        }
        if (!failures.isEmpty()) {
            throw new GradleException('Wheeler assertion syntax has one authority:\n'
                    + failures.join('\n'))
        }
    }
}

tasks.register('sourceLayoutTest') {
    group = 'verification'
    description = 'Keeps Wheeler source directories small enough to navigate without a sextant.'
    doLast {
        def byDirectory = fileTree(repositoryRoot) {
            include '**/*.w'
            exclude '.git/**', '**/build/**', '**/node_modules/**'
        }.files.groupBy { it.parentFile }
        def crowded = byDirectory.findAll {
            _, files -> files.size() > maxWheelerSourceFilesPerDirectory
        }.collect { directory, files ->
            def logical = repositoryRoot.toPath().relativize(directory.toPath()).toString()
            "${logical}: ${files.size()} files"
        }.sort()
        if (!crowded.isEmpty()) {
            throw new GradleException(
                    "Wheeler source directories may contain at most "
                            + "${maxWheelerSourceFilesPerDirectory} files; split by concern:\n"
                            + crowded.join('\n'))
        }
    }
}

tasks.register('sourceHeaderTest') {
    group = 'verification'
    description = 'Requires an owned header comment on every authored code file.'
    doLast {
        def sources = fileTree(repositoryRoot) {
            include '**/*.java', '**/*.w', '**/*.js', '**/*.css', '**/*.gradle',
                    '**/*.scm', '**/*.sh', '**/*.py'
            exclude '.git/**', '**/.gradle/**', '**/build/**', '**/node_modules/**',
                    'tree-sitter-wheeler/src/**'
        }
        def missing = []
        sources.files.sort().each { file ->
            def text = file.getText('UTF-8')
            def valid = true
            if (file.name.endsWith('.java')) {
                def declaration = text =~ /(?m)^(?:@[\w.]+(?:\([^\n]*\))?\s*)*(?:(?:public|protected|private|abstract|final|sealed|non-sealed|static)\s+)*(?:class|record|enum|interface)\s+\w+/
                valid = declaration.find()
                        && text.substring(0, declaration.start()).stripTrailing().endsWith('*/')
            } else if (file.name.endsWith('.w')) {
                valid = text.startsWith('//! ')
            } else if (file.name.endsWith('.js')) {
                valid = text.readLines().take(3).any { it.startsWith('//') }
            } else if (file.name.endsWith('.css')) {
                valid = text.stripLeading().startsWith('/*')
            } else if (file.name.endsWith('.gradle')) {
                valid = text.stripLeading().startsWith('//')
            } else if (file.name.endsWith('.scm')) {
                valid = text.stripLeading().startsWith(';')
            } else if (file.name.endsWith('.sh')) {
                valid = text.readLines().take(3).count { it.startsWith('#') } >= 2
            } else if (file.name.endsWith('.py')) {
                def start = text.stripLeading()
                valid = start.startsWith('#') || start.startsWith('"""')
                        || start.startsWith("'''")
            }
            if (!valid) {
                missing.add(repositoryRoot.toPath().relativize(file.toPath()).toString())
            }
        }
        if (!missing.isEmpty()) {
            throw new GradleException('Code files require owned header comments:\n' + missing.join('\n'))
        }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(26)
        }
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:5.14.1')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 26
        options.compilerArgs += ['-Xlint:all', '-Werror']
    }

    test {
        useJUnitPlatform()
        // A bounded seed must not turn host CPU count into test-process fan-out.
        maxParallelForks = 1
        forkEvery = 0
        // Sixty-four-statement compiler differentials retain bounded rewind histories.
        maxHeapSize = '1024m'
        jvmArgs '-XX:ActiveProcessorCount=2'
        testLogging {
            events 'failed', 'skipped'
            exceptionFormat = 'full'
        }
    }

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
    }

    check.dependsOn jacocoTestReport
    check.dependsOn rootProject.tasks.named('bootstrapContainmentTest')
    check.dependsOn rootProject.tasks.named('sourceHeaderTest')
    check.dependsOn rootProject.tasks.named('sourceLayoutTest')
    check.dependsOn rootProject.tasks.named('sourceSyntaxTest')
}
